--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -17,6 +17,11 @@
     text-align: left;
     color: #575757;
 }
+@media (max-width: 550px) {
+    width: 300px;
+    height: 40px;
+    font-size: 20px;
+}
 @media (max-width: 450px) {
     display: none;
 }
@@ -66,6 +71,9 @@ input:valid ~ label{
     margin-top: 15px;
     margin-left: 20px;
     user-select: none;
+    @media (max-width: 550px) {
+        margin-top: 5px;
+    }
 @media (max-width: 450px) {
     position:static;
     margin: 0;
