--- a/src/components/UI/Progress/Progress.module.css
+++ b/src/components/UI/Progress/Progress.module.css
@@ -12,6 +12,14 @@
   user-select: none;
   transform: rotate(100deg);
   transition: 0.5s;
+  @media (max-width: 550px) {
+    width: 180px;
+    height: 180px;
+  }
+    @media (max-width: 400px) {
+    width: 160px;
+    height: 160px;
+  }
 }
 .bar::before{
  content: "";
@@ -21,6 +29,18 @@
  border-radius: 50%;
  background: white;
 }
+@media (max-width: 550px) {
+  .bar::before{
+    width: 155px;
+    height: 155px;
+  }
+}
+@media (max-width: 400px) {
+  .bar::before{
+    width: 135px;
+    height: 135px;
+  }
+}
 .percent{
   font-family: Roboto, sans-serif;
   font-size: 90px;
@@ -29,4 +49,10 @@
   color: rgba(0, 255, 56, 1);
   position: absolute;
   transform: rotate(260deg);
+  @media (max-width: 550px) {
+    width: 100px;
+    height: 100px;
+    font-size: 45px;
+    padding: 25px 0 0 15px;
+  }
 }
