--- a/src/components/UI/Progress/Progress.module.css
+++ b/src/components/UI/Progress/Progress.module.css
@@ -56,3 +56,62 @@
     padding: 25px 0 0 15px;
   }
 }
+
+
+
+
+ /* Mini */
+ .progressMini{
+  transition: 0.5s;
+}
+.barMini {
+  position: relative;
+  width: 260px;
+  height: 260px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
+  transform: rotate(100deg);
+  transition: 0.5s;
+  @media (max-width: 550px) {
+    width: 130px;
+    height: 130px;
+  }
+    @media (max-width: 400px) {
+    width: 130px;
+    height: 130px;
+  }
+}
+.barMini::before{
+ content: "";
+ position: absolute;
+ width: 230px;
+ height: 230px;
+ border-radius: 50%;
+ background: white;
+}
+@media (max-width: 550px) {
+  .barMini::before{
+    width: 115px;
+    bottom: 7px;
+    top: 8px;
+    height: 115px;
+  }
+}
+.percentMini{
+  font-family: Roboto, sans-serif;
+  font-size: 90px;
+  font-weight: 500;
+  letter-spacing: 0em;
+  color: rgba(0, 255, 56, 1);
+  position: absolute;
+  transform: rotate(260deg);
+  @media (max-width: 550px) {
+    width: 100px;
+    height: 100px;
+    font-size: 35px;
+    padding: 25px 0 0 15px;
+  }
+}
